fix(core/select): remove default overflow hidden to fix disablePortal display bug

--- a/packages/core/src/select/_select-styles.scss
+++ b/packages/core/src/select/_select-styles.scss
@@ -12,7 +12,6 @@ $tags-gap: 4px !default;
 
 .#{$prefix} {
   position: relative;
-  overflow: hidden;
 
   &--full-width {
     width: 100%;
